--- a/package.json
+++ b/package.json
@@ -9,12 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.2",
-    "@fortawesome/free-solid-svg-icons": "^6.4.2",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "next": "13.5.4",
+    "phosphor-icons": "^1.4.2",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^4.11.0",
     "react-responsive": "^9.0.2",
     "styled-components": "^6.0.8"
   },
